# rdftools

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.MD  conanfile.txt
.github/workflows/: build.yml  release.yml
cmake/: conan_cmake.cmake  execs_optimizations.cmake  version.hpp.in
execs/: CMakeLists.txt
execs/deduprdf/: CMakeLists.txt
execs/deduprdf/src/: main.cpp
execs/deduprdf/src/parser/: IStreamQuadIterator.cpp  IStreamQuadIterator.hpp  IStreamQuadIteratorSerdImpl.cpp  IStreamQuadIteratorSerdImpl.hpp
